[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "selene"
version = "0.1.0"
description = "A minimal, perceptually-aware data visualization library inspired by moonlight."
authors = [
    { name = "Bedra", email = "bedradedi@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7"
]

